# crystallus

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: test.yml
crystallus/: __init__.py  crystal_generator.py  utils.py  wyckoff_cfg_generator.py  wyckoff_db.py
env/: environment.yml
examples/: ShotgunCSP-GT.ipynb  ShotgunCSP-GW.ipynb  basic_usage.ipynb  pbc_all_distance.ipynb  test_complicate_case.ipynb
libcrystal/: Cargo.toml
libcrystal/benches/: bench_wyckoff_gen_many.rs  bench_wyckoff_gen_one.rs
libcrystal/src/: generator.rs  lib.rs  structure.rs  utils.rs  wyckoff_cfg.rs  wyckoff_pos.rs
libcrystal/src/generator/: base.rs  empirical.rs  options.rs
libcrystal/src/utils/: lattice.rs  pbc.rs  wrap_pbc.rs
shotgun_csp/: __init__.py
shotgun_csp/datatools/: __init__.py  splitter.py  transform.py
shotgun_csp/descriptor/: __init__.py  base.py  cgcnn.py  compositions.py
shotgun_csp/generator/: potential.py  utils.py
shotgun_csp/generator/temple_base/: __init__.py  filter.py  template.py
shotgun_csp/generator/wyckoff_base/: __init__.py  crystal_generator.py  wyckoff_cfg_generator.py
shotgun_csp/model/: __init__.py  cgcnn.py  metrics.py  sequential.py  wrap.py
shotgun_csp/model/extension/: __init__.py  persist.py  tensor_convert.py  validator.py
shotgun_csp/model/training/: __init__.py  base.py  checker.py  clip_grad.py  dataset.py  lr_scheduler.py  optimizer.py  trainer.py
shotgun_csp/utils/: __init__.py  atom_init.csv  collection.py  parameter_gen.py  preset.py  product.py  vasp.py  wyckoff_db.py
src/: crystal_gen.rs  lib.rs  particle_gen.rs  utils.rs  wyckoff_cfg_gen.rs
tests/: test_crystal_generator.py  test_generator_performance.py  test_wyckoff_generator.py
