[package]
authors = ['tsumina <liu.chang.1865@gmail.com>']
edition = '2021'
homepage = 'https://github.com/yoshida-lab/crystallus'
license = 'Apache-2'
name = 'shotgun-csp'
publish = false
version = '0.3.2-rc1'

[workspace]
members = ['libcrystal']

[lib]
crate-type = ['cdylib']
name = 'crystallus'

[dependencies]
itertools = '0.13.0'
rand = "0.8.5"
rayon = '1.10.0'
either = "1.12.0"
pyo3-log = "0.10.0"
log = '0.4.21'
env_logger = '^0.11.3'

[dependencies.pyo3]
version = "0.21.2"
features = ["extension-module"]

[dependencies.libcrystal]
path = 'libcrystal'

[features]
default = ['mkl']

mkl = ["libcrystal/mkl"]
openblas = ["libcrystal/openblas"]
netlib = ["libcrystal/netlib"]
