[package]
authors = ['tsumina <liu.chang.1865@gmail.com>']
edition = '2021'
license = 'Apache-2'
name = 'libcrystal'
repository = 'https://github.com/yoshida-lab/crystallus'
version = '0.3.1'
workspace = '..'

# benchmark only works on nightly builds
# [[bench]]
# name = 'wyckoff_gen_one'
# path = 'benches/bench_wyckoff_gen_one.rs'

# [[bench]]
# name = 'wyckoff_gen_many'
# path = 'benches/bench_wyckoff_gen_many.rs'

[lib]
name = 'libcrystal'

[dependencies]
lazy_static = '1.4.0'
num-traits = '0.2.19'
rand = '0.8.5'
rand_distr = '0.4.3'
rayon = '1.10.0'
regex = '1.10.4'
serde_json = '1.0.117'
log = '0.4.21'

approx = '^0.5.1'
ndarray = { version = "^0.15.6", features = ['rayon', 'blas'] }
blas-src = { version = "0.10.0", default-features = false }
ndarray-linalg = { version = "0.16.0", default-features = false }

[dev-dependencies]
approx = '^0.5.1'
ndarray = { version = "^0.15.6", features = ['rayon', 'blas', 'approx-0_5'] }
blas-src = { version = "0.10.0", default-features = false }
ndarray-linalg = { version = "0.16.0", default-features = false }

# features
[features]
# f32 or f64
f32 = []

# enable blas usage in ndarray
mkl = ['ndarray-linalg/intel-mkl-system', 'blas-src/intel-mkl']
netlib = ['ndarray-linalg/netlib-system', 'blas-src/netlib']
openblas = ['ndarray-linalg/openblas-system', 'blas-src/openblas']

mkl-static = ['ndarray-linalg/intel-mkl-static', 'blas-src/intel-mkl']
netlib-static = ['ndarray-linalg/netlib-static', 'blas-src/netlib']
openblas-static = ['ndarray-linalg/openblas-static', 'blas-src/openblas']
